feat: add section Help with adaptive

--- a/src/styles/Footer.scss
+++ b/src/styles/Footer.scss
@@ -7,6 +7,12 @@ footer{
   background-color: #000;
 }
 
+.donate-btn{
+  display: contents;
+  width: 298px;
+  height: 54px;
+}
+
 .footer__container{
   display: flex;
   flex-direction: column;
