--- a/src/styles/Header.scss
+++ b/src/styles/Header.scss
@@ -1,3 +1,98 @@
+.menu-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 998;
+}
+
+.header.open{
+  height: 100%;
+  padding-block: 0;
+  background: rgba(0, 0, 0, 0.75);
+
+  & > .header__container-nav-list{
+    display: flex;
+    flex-direction: column;
+    margin-left: 1.5%;
+    margin-top: 7%;
+    gap: 15px;
+  }
+
+  & > .header__container{
+    padding: 0;
+    width: 100%;
+    max-width: 100%;
+
+    & > .header__container-logo{
+      width: 65.6px;
+      max-width: 65.6px;
+      height: 41.6px;
+      border: 0.8px solid #FE9013;
+      margin-left: 10px;
+      margin-top: 9px;
+      position: absolute;
+      z-index: 1001;
+
+      &::before{
+        content: url("../assets/icon/bamboo_burger.svg");
+        left: 6.48px;
+        top: 17.99px;
+      }
+
+      & > .header__container-logo-title{
+        width: 57.99px;
+        height: 35.93px;
+        font-weight: 400;
+        font-size: 15.2116px;
+        line-height: 120%;
+        color: #FE9013;
+        left: 1.75px;
+        top: 2.22px;
+      }
+    }
+
+    & > .header__container-nav{
+      height: 329px;
+      width: 100%;
+      background: #FFF;
+      margin-left: 0;
+      z-index: 1000;
+      animation: burger_menu_drop 0.5s ease;
+    }
+
+    & > .header__container-nav-menu__burger{
+      content: url("../assets/icon/cross_burger.svg");
+      width: 32px;
+      height: 32px;
+      z-index: 1001;
+    }
+
+    .header__container-nav-list.open{
+      display: flex;
+      flex-direction: column;
+      margin-left: 1.5%;
+      margin-top: 7%;
+      gap: 15px;
+
+      & > .header__container-nav-list-item{
+        margin-left: 0;
+
+        &:last-child{
+          position: relative;
+        }
+      }
+
+
+      &  > li > a{
+        color: #000;
+      }
+    }
+  }
+}
+
 .header {
   display: flex;
   justify-content: center;
@@ -194,5 +289,13 @@
   }
 }
 
+@keyframes burger_menu_drop {
 
+  0%{
+    transform: translateY(-200px);
+  }
 
+  100%{
+    transform: translateY(0);
+  }
+}
