--- a/src/styles/Help.scss
+++ b/src/styles/Help.scss
@@ -245,7 +245,15 @@ input[type=number] {
   font-size: 16px;
   border-radius: 2px;
   background: transparent url('../assets/icon/dollar.svg') no-repeat right 9px center;
+  appearance: textfield;
   -moz-appearance: textfield;
+
+  &::-webkit-inner-spin-button,
+  &::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+  }
+
 
   &::-moz-placeholder{
     color: #576f82;
